Enhance `ClassificationAgent` with improved intent classification logic using AI prompts and examples